Deployment_Project/force-app/main/default/objects/DeveloperG__c/DeveloperG__c.object-meta.xml
<CustomObject>
    <description>This object stores all the developers of an organization.</description>
    <label>DeveloperG</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeveloperGs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>