Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Stores the birthdate.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>