Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <description>This field store the designation of the developer.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Designation</label>
    <length>30</length>
    <type>Text</type>
</CustomField>