Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Developer.</description>
    <label>Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>DeveloperGs</relationshipLabel>
    <relationshipName>DeveloperGs</relationshipName>
    <type>Lookup</type>
</CustomField>