Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>This field is used to store the name of the organization that a developer is affiliated with.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Organization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>