Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The developer should have the same project as the reporting manager.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>DeveloperGs</relationshipLabel>
    <relationshipName>DeveloperGs</relationshipName>
    <type>Lookup</type>
</CustomField>