Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <description>This field stores the name of the manager to which the developer reports to.</description>
    <label>Reporting Manager</label>
    <referenceTo>ManagerG__c</referenceTo>
    <relationshipLabel>DeveloperGs</relationshipLabel>
    <relationshipName>DeveloperGs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>