Deployment_Project/force-app/main/default/objects/DeveloperG__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <description>Stores the salary of the developer.</description>
    <label>Salary</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>